--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,9 +1,9 @@
 # DOCKER_TAG=
 ETHEREUM_JSONRPC_VARIANT=besu
-ETHEREUM_JSONRPC_HTTP_URL=https://idspeer1.test.bharatblockchain.io:15021
+ETHEREUM_JSONRPC_HTTP_URL=https://bbnrpc.hyderabad.bharatblockchain.io
 # ETHEREUM_JSONRPC_FALLBACK_HTTP_URL=
 DATABASE_URL=postgresql://postgres:@host.docker.internal:7432/blockscout?ssl=false
-ETHEREUM_JSONRPC_TRACE_URL=https://idspeer1.test.bharatblockchain.io:15021
+ETHEREUM_JSONRPC_TRACE_URL=https://bbnrpc.hyderabad.bharatblockchain.io
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_HTTP_TIMEOUT=
 NETWORK=TestNet
@@ -134,7 +134,7 @@ INDEXER_BLOCK_REWARD_BATCH_SIZE= 10
 # TOKEN_ID_MIGRATION_BATCH_SIZE=
 # INDEXER_INTERNAL_TRANSACTIONS_TRACER_TYPE=
 # WEBAPP_URL=
-API_URL=https://idspeer1.test.bharatblockchain.io:15021
+API_URL=https://bbnrpc.hyderabad.bharatblockchain.io/
 SHOW_ADDRESS_MARKETCAP_PERCENTAGE=true
 CHECKSUM_ADDRESS_HASHES=true
 CHECKSUM_FUNCTION=eth
@@ -156,7 +156,7 @@ MAINTENANCE_ALERT_MESSAGE=
 SOURCIFY_INTEGRATION_ENABLED=false
 SOURCIFY_SERVER_URL=
 SOURCIFY_REPO_URL=
-CHAIN_ID=2018
+CHAIN_ID=2023
 MAX_SIZE_UNLESS_HIDE_ARRAY=50
 HIDE_BLOCK_MINER=false
 DISPLAY_TOKEN_ICONS=false
@@ -166,7 +166,7 @@ RE_CAPTCHA_SECRET_KEY=
 RE_CAPTCHA_CLIENT_KEY=
 RE_CAPTCHA_V3_SECRET_KEY=
 RE_CAPTCHA_V3_CLIENT_KEY=
-JSON_RPC=https://idspeer1.test.bharatblockchain.io:15021
+JSON_RPC=https://bbnrpc.hyderabad.bharatblockchain.io
 #API_RATE_LIMIT_DISABLED=true
 API_RATE_LIMIT_TIME_INTERVAL=1s
 API_RATE_LIMIT_BY_IP_TIME_INTERVAL=5m
