--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -318,8 +318,8 @@ MICROSERVICE_SIG_PROVIDER_ENABLED=true
 MICROSERVICE_SIG_PROVIDER_URL=http://sig-provider:8050/
 # MICROSERVICE_BENS_URL=
 # MICROSERVICE_BENS_ENABLED=
-# MICROSERVICE_ACCOUNT_ABSTRACTION_ENABLED=true
-# MICROSERVICE_ACCOUNT_ABSTRACTION_URL=
+MICROSERVICE_ACCOUNT_ABSTRACTION_ENABLED=false
+MICROSERVICE_ACCOUNT_ABSTRACTION_URL=http://user-ops-indexer:8050/
 # MICROSERVICE_METADATA_URL=
 # MICROSERVICE_METADATA_ENABLED=
 DECODE_NOT_A_CONTRACT_CALLS=true
