changing fe port in docker compose from 80 to 8084

--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_API_HOST=localhost
+NEXT_PUBLIC_API_PORT=8084
 NEXT_PUBLIC_API_PROTOCOL=http
 NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
 NEXT_PUBLIC_NETWORK_NAME=Awesome chain
