--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -371,3 +371,6 @@ TENDERLY_CHAIN_PATH=
 # BRIDGED_TOKENS_POA_OMNI_BRIDGE_MEDIATOR=
 # BRIDGED_TOKENS_AMB_BRIDGE_MEDIATORS
 # BRIDGED_TOKENS_FOREIGN_JSON_RPC
+# MUD_INDEXER_ENABLED=
+# MUD_DATABASE_URL=
+# MUD_POOL_SIZE=50
