--- a/.github/workflows/pre-release-eth.yml
+++ b/.github/workflows/pre-release-eth.yml
@@ -1,8 +1,11 @@
-name: Release for Zetachain
+name: Pre-release for Ethereum
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
+    inputs:
+      number:
+        type: number
+        required: true
 
 env:
   OTP_VERSION: ${{ vars.OTP_VERSION }}
@@ -22,16 +25,15 @@ jobs:
           docker-username: ${{ secrets.DOCKER_USERNAME }}
           docker-password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image for Zetachain (indexer + API)
+      - name: Build and push Docker image for Ethereum (indexer + API)
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: blockscout/blockscout-zetachain:latest, blockscout/blockscout-zetachain:${{ env.RELEASE_VERSION }}
+          tags: blockscout/blockscout-ethereum:${{ env.RELEASE_VERSION }}-alpha.${{ inputs.number }}
           platforms: |
             linux/amd64
-            linux/arm64/v8
           build-args: |
             DISABLE_WEBAPP=false
             API_V1_READ_METHODS_DISABLED=false
@@ -40,20 +42,19 @@ jobs:
             CACHE_TOTAL_GAS_USAGE_COUNTER_ENABLED=
             CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL=
             ADMIN_PANEL_ENABLED=false
-            BLOCKSCOUT_VERSION=v${{ env.RELEASE_VERSION }}-beta
+            BLOCKSCOUT_VERSION=v${{ env.RELEASE_VERSION }}-alpha.${{ inputs.number }}
             RELEASE_VERSION=${{ env.RELEASE_VERSION }}
-            CHAIN_TYPE=zetachain
+            CHAIN_TYPE=ethereum
 
-      - name: Build and push Docker image for Zetachain (indexer)
+      - name: Build and push Docker image for Ethereum (indexer)
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: blockscout/blockscout-zetachain:${{ env.RELEASE_VERSION }}-indexer
+          tags: blockscout/blockscout-ethereum:${{ env.RELEASE_VERSION }}-alpha.${{ inputs.number }}-indexer
           platforms: |
             linux/amd64
-            linux/arm64/v8
           build-args: |
             DISABLE_API=true
             DISABLE_WEBAPP=true
@@ -61,20 +62,19 @@ jobs:
             CACHE_TOTAL_GAS_USAGE_COUNTER_ENABLED=
             CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL=
             ADMIN_PANEL_ENABLED=false
-            BLOCKSCOUT_VERSION=v${{ env.RELEASE_VERSION }}-beta
+            BLOCKSCOUT_VERSION=v${{ env.RELEASE_VERSION }}-alpha.${{ inputs.number }}
             RELEASE_VERSION=${{ env.RELEASE_VERSION }}
-            CHAIN_TYPE=zetachain
+            CHAIN_TYPE=ethereum
 
-      - name: Build and push Docker image for Zetachain (API)
+      - name: Build and push Docker image for Ethereum (API)
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: blockscout/blockscout-zetachain:${{ env.RELEASE_VERSION }}-api
+          tags: blockscout/blockscout-ethereum:${{ env.RELEASE_VERSION }}-alpha.${{ inputs.number }}-api
           platforms: |
             linux/amd64
-            linux/arm64/v8
           build-args: |
             DISABLE_INDEXER=true
             DISABLE_WEBAPP=true
@@ -82,6 +82,6 @@ jobs:
             CACHE_TOTAL_GAS_USAGE_COUNTER_ENABLED=
             CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL=
             ADMIN_PANEL_ENABLED=false
-            BLOCKSCOUT_VERSION=v${{ env.RELEASE_VERSION }}-beta
+            BLOCKSCOUT_VERSION=v${{ env.RELEASE_VERSION }}-alpha.${{ inputs.number }}
             RELEASE_VERSION=${{ env.RELEASE_VERSION }}
-            CHAIN_TYPE=zetachain
+            CHAIN_TYPE=ethereum
