--- a/.github/workflows/release-rootstock.yml
+++ b/.github/workflows/release-rootstock.yml
@@ -1,4 +1,4 @@
-name: Release for Zetachain
+name: Release for Rootstock
 
 on:
   release:
@@ -22,13 +22,13 @@ jobs:
           docker-username: ${{ secrets.DOCKER_USERNAME }}
           docker-password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image for Zetachain (indexer + API)
+      - name: Build and push Docker image for Rootstock (indexer + API)
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: blockscout/blockscout-zetachain:latest, blockscout/blockscout-zetachain:${{ env.RELEASE_VERSION }}
+          tags: blockscout/blockscout-rsk:latest, blockscout/blockscout-rsk:${{ env.RELEASE_VERSION }}
           platforms: |
             linux/amd64
             linux/arm64/v8
@@ -42,15 +42,15 @@ jobs:
             ADMIN_PANEL_ENABLED=false
             BLOCKSCOUT_VERSION=v${{ env.RELEASE_VERSION }}-beta
             RELEASE_VERSION=${{ env.RELEASE_VERSION }}
-            CHAIN_TYPE=zetachain
+            CHAIN_TYPE=rsk
 
-      - name: Build and push Docker image for Zetachain (indexer)
+      - name: Build and push Docker image for Rootstock (indexer)
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: blockscout/blockscout-zetachain:${{ env.RELEASE_VERSION }}-indexer
+          tags: blockscout/blockscout-rsk:${{ env.RELEASE_VERSION }}-indexer
           platforms: |
             linux/amd64
             linux/arm64/v8
@@ -63,15 +63,15 @@ jobs:
             ADMIN_PANEL_ENABLED=false
             BLOCKSCOUT_VERSION=v${{ env.RELEASE_VERSION }}-beta
             RELEASE_VERSION=${{ env.RELEASE_VERSION }}
-            CHAIN_TYPE=zetachain
+            CHAIN_TYPE=rsk
 
-      - name: Build and push Docker image for Zetachain (API)
+      - name: Build and push Docker image for Rootstock (API)
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: blockscout/blockscout-zetachain:${{ env.RELEASE_VERSION }}-api
+          tags: blockscout/blockscout-rsk:${{ env.RELEASE_VERSION }}-api
           platforms: |
             linux/amd64
             linux/arm64/v8
@@ -84,4 +84,4 @@ jobs:
             ADMIN_PANEL_ENABLED=false
             BLOCKSCOUT_VERSION=v${{ env.RELEASE_VERSION }}-beta
             RELEASE_VERSION=${{ env.RELEASE_VERSION }}
-            CHAIN_TYPE=zetachain
+            CHAIN_TYPE=rsk
