--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,17 +1,35 @@
-NEXT_PUBLIC_API_HOST=localhost
-NEXT_PUBLIC_API_PROTOCOL=http
-NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
-NEXT_PUBLIC_NETWORK_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_SHORT_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_ID=5
-NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Ether
-NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=ETH
+NEXT_PUBLIC_API_HOST=scan.wonnetwork.org
+NEXT_PUBLIC_API_PROTOCOL=https
+NEXT_PUBLIC_STATS_API_HOST=http://stats.wonnetwork.org
+NEXT_PUBLIC_NETWORK_NAME=Won Network
+NEXT_PUBLIC_NETWORK_SHORT_NAME=Won Chain
+NEXT_PUBLIC_NETWORK_ID=686868
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=WON
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=WON
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
 NEXT_PUBLIC_API_BASE_PATH=/
-NEXT_PUBLIC_APP_HOST=localhost
-NEXT_PUBLIC_APP_PROTOCOL=http
+NEXT_PUBLIC_APP_HOST=scan.wonnetwork.org
+NEXT_PUBLIC_APP_PROTOCOL=https
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
-NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
-NEXT_PUBLIC_IS_TESTNET=true
-NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
+NEXT_PUBLIC_VISUALIZE_API_HOST=http://visualizer.wonnetwork.org 
+NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+NEXT_PUBLIC_NETWORK_RPC_URL=https://rpc.wonnetwork.org
+NEXT_PUBLIC_IS_TESTNET=false
+NEXT_PUBLIC_NETWORK_VERIFICATION_TYPE=mining
+NEXT_PUBLIC_HOMEPAGE_PLATE_TEXT_COLOR=white
+NEXT_PUBLIC_NETWORK_LOGO=https://wonnetwork.org/images/won.png
+NEXT_PUBLIC_NETWORK_ICON=https://wonnetwork.org/images/won.png
+NEXT_PUBLIC_OTHER_LINKS=[{'url':'https://wonnetwork.org','text':'WonNetwork'}]
+NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=radial-gradient(103.03% 103.03% at 0% 0%, rgba(183, 148, 244, 0.8) 0%, rgba(0, 163, 196, 0.8) 100%), var(--chakra-colors-blue-400)
+NEXT_PUBLIC_HOMEPAGE_SHOW_AVG_BLOCK_TIME=true 
+NEXT_PUBLIC_OTHER_LINKS=[{"url":"https://wondollars.org/","text":"Won Claim"},{"url":"https://bridge.wondollars.org/","text":"Won Bridge"},{"url":"https://airdrop.wondollars.org/","text":"Won Airdrop"},{"url":"https://game.wondollars.org/", "text":"Won Game"},{"url":"https://stake.wondollars.org/","text":"Won Stake"},{"url":"https://faucet.wondollars.org/","text":"Won Faucet"}]
+NEXT_PUBLIC_PROMOTE_BLOCKSCOUT_IN_TITLE=true 
+NEXT_PUBLIC_OG_DESCRIPTION="Won Network is a cutting-edge blockchain project dedicated to offering individuals a secure asset storage solution with an emphasis on privacy, gas-free transactions, and long-term utility services such as wallet apps, decentralized exchange (DEX), games, and launchpad."
+NEXT_PUBLIC_OG_IMAGE_URL=https://wonnetwork.org/images/won.png
+NEXT_PUBLIC_GAS_TRACKER_ENABLED=true
+NEXT_PUBLIC_GAS_TRACKER_UNITS=[ 'gwei' ]
+NEXT_PUBLIC_GOOGLE_ANALYTICS_PROPERTY_ID=G-EP4KWZDQL0
+NEXT_PUBLIC_SWAP_BUTTON_URL=https://pancakeswap.finance/swap?inputCurrency=0x55d398326f99059fF775485246999027B3197955&outputCurrency=0xC05e4d0E570E5C0Be901Bbf36D6a27819a24F6c9
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=58937b02b1fc1d5f6fe875c67666eb57
+
