--- a/docker-compose/services/db.yml
+++ b/docker-compose/services/db.yml
@@ -19,9 +19,9 @@ services:
     container_name: 'db'
     command: postgres -c 'max_connections=200' -c 'client_connection_check_interval=60000'
     environment:
-        POSTGRES_DB: 'blockscout'
+        POSTGRES_DB: 'blockscout_db'
         POSTGRES_USER: 'blockscout'
-        POSTGRES_PASSWORD: 'ceWb1MeLBEeOIfk65gU8EjF8'
+        POSTGRES_PASSWORD: 'Vuongdev123'
     ports:
       - target: 5432
         published: 7432
