--- a/docker-compose/config/charts.toml
+++ b/docker-compose/config/charts.toml
@@ -1,64 +1,75 @@
 [[counters]]
 id = "totalBlocks"
 title = "Total blocks"
+description = "Total number of blocks"
 update_schedule = "0 0 */3 * * * *"
 
 [[counters]]
 id = "averageBlockTime"
 title = "Average block time"
+description = "Average time per block"
 units = "s"
 update_schedule = "0 0 15 * * * *"
 
 [[counters]]
 id = "completedTxns"
 title = "Completed txns"
+description = "Total number of completed transactions"
 update_schedule = "0 5 */3 * * * *"
 
 [[counters]]
 id = "totalAccounts"
 title = "Total accounts"
+description = "Total number of accounts"
 update_schedule = "0 0 16 * * * *"
 
 # [[counters]]
 # id = "totalNativeCoinHolders"
-# title = "Total Native Coin Holders"
+# title = "Total WON Coin Holders"
+# description = "Total number of WON coin holders"
 # update_schedule = "0 0 17 * * * *"
 
 [[counters]]
 id = "totalNativeCoinTransfers"
-title = "Total native coin transfers"
+title = "Total WON coin transfers"
+description = "Total number of WON coin transfers"
 update_schedule = "0 0 13 * * * *"
 
 [[counters]]
 id = "totalTokens"
 title = "Total tokens"
+description = "Total number of tokens"
 update_schedule = "0 0 18 * * * *"
 
 [[counters]]
 id = "totalTxns"
 title = "Total txns"
+description = "Total number of transactions"
 update_schedule = "0 10 */3 * * * *"
 
 [[counters]]
 id = "lastNewContracts"
 title = "Number of deployed contracts today"
+description = "Number of new contracts deployed today"
 update_schedule = "0 15 */3 * * * *"
 
 [[counters]]
 id = "totalContracts"
 title = "Total contracts"
+description = "Total number of contracts"
 update_schedule = "0 20 */3 * * * *"
 
 [[counters]]
 id = "lastNewVerifiedContracts"
 title = "Number of verified contracts today"
+description = "Number of new verified contracts today"
 update_schedule = "0 25 */3 * * * *"
 
 [[counters]]
 id = "totalVerifiedContracts"
 title = "Total verified contracts"
+description = "Total number of verified contracts"
 update_schedule = "0 30 */3 * * * *"
-
 
 [[lines.sections]]
 id = "accounts"
@@ -81,7 +92,6 @@ id = "newAccounts"
 title = "New accounts"
 description = "New accounts number per day"
 update_schedule = "0 0 21 * * * *"
-
 
 [[lines.sections]]
 id = "transactions"
@@ -119,7 +129,6 @@ title = "Transactions success rate"
 description = "Successful transactions rate per day"
 update_schedule = "0 0 19 * * * *"
 
-
 [[lines.sections]]
 id = "blocks"
 title = "Blocks"
@@ -143,7 +152,6 @@ title = "Average block rewards"
 description = "Average amount of distributed reward in tokens per day"
 units = "WON"
 update_schedule = "0 0 20 * * * *"
-
 
 [[lines.sections]]
 id = "tokens"
@@ -174,7 +182,6 @@ update_schedule = "0 0 3 * * * *"
 # units = "WON"
 # update_schedule = "0 0 11 * * * *"
 
-
 [[lines.sections]]
 id = "gas"
 title = "Gas"
@@ -197,7 +204,6 @@ title = "Average gas price"
 description = "Average gas price for the period (Gwei)"
 units = "Gwei"
 update_schedule = "0 0 14 * * * *"
-
 
 [[lines.sections]]
 id = "contracts"
