--- a/docker-compose/envs/common-stats.env
+++ b/docker-compose/envs/common-stats.env
@@ -5,7 +5,7 @@
 STATS__SERVER__HTTP__ENABLED=true
 STATS__SERVER__HTTP__ADDR=0.0.0.0:8050
 STATS__SERVER__HTTP__MAX_BODY_SIZE=2097152
-
+STATS__CHARTS_CONFIG=/config/charts.toml
 STATS__SERVER__GRPC__ENABLED=false
 STATS__SERVER__GRPC__ADDR=0.0.0.0:8051
 
