--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,7 @@ jobs:
           push: true
           cache-from: type=registry,ref=blockscout/blockscout:buildcache
           cache-to: type=registry,ref=blockscout/blockscout:buildcache,mode=max
-          tags: blockscout/blockscout:${{ env.RELEASE_VERSION }}-indexer
+          tags: blockscout/blockscout:${{ env.RELEASE_VERSION }}-api
           platforms: |
             linux/amd64
             linux/arm64/v8
