--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -66,7 +66,12 @@ services:
     extends:
       file: ./services/frontend.yml
       service: frontend
-
+  sc-verifier:
+    extends:
+      file: ./services/smart-contract-verifier.yml
+      service: smart-contract-verifier
+    ports:
+      - 8082:8050
   stats-db-init:
     extends:
       file: ./services/stats.yml
