--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -309,20 +309,20 @@ JSON_RPC=
 API_RATE_LIMIT_UI_V2_TOKEN_TTL_IN_SECONDS=18000
 FETCH_REWARDS_WAY=trace_block
 MICROSERVICE_SC_VERIFIER_ENABLED=true
-MICROSERVICE_SC_VERIFIER_URL=https://scan.wonnetwork.org:8082/
-MICROSERVICE_SC_VERIFIER_TYPE=sc_verifier
-#MICROSERVICE_SC_VERIFIER_URL=http://smart-contract-verifier:8050/
+#MICROSERVICE_SC_VERIFIER_URL=https://scan.wonnetwork.org:8082/
 #MICROSERVICE_SC_VERIFIER_TYPE=sc_verifier
+MICROSERVICE_SC_VERIFIER_URL=http://smart-contract-verifier:8050/
+MICROSERVICE_SC_VERIFIER_TYPE=sc_verifier
 #MICROSERVICE_SC_VERIFIER_URL=https://eth-bytecode-db.services.blockscout.com/
 #MICROSERVICE_SC_VERIFIER_TYPE=eth_bytecode_db
 MICROSERVICE_ETH_BYTECODE_DB_INTERVAL_BETWEEN_LOOKUPS=10m
 MICROSERVICE_ETH_BYTECODE_DB_MAX_LOOKUPS_CONCURRENCY=10
 MICROSERVICE_VISUALIZE_SOL2UML_ENABLED=true
-MICROSERVICE_VISUALIZE_SOL2UML_URL=https://visualizer.wonnetwork.org
-#MICROSERVICE_VISUALIZE_SOL2UML_URL=http://visualizer:8050/
+#MICROSERVICE_VISUALIZE_SOL2UML_URL=https://visualizer.wonnetwork.org
+MICROSERVICE_VISUALIZE_SOL2UML_URL=http://visualizer:8050/
 MICROSERVICE_SIG_PROVIDER_ENABLED=true
 MICROSERVICE_SIG_PROVIDER_URL=https://scan.wonnetwork.org:8083/
-#MICROSERVICE_SIG_PROVIDER_URL=http://sig-provider:8050/
+MICROSERVICE_SIG_PROVIDER_URL=http://sig-provider:8050/
 # MICROSERVICE_BENS_URL=
 # MICROSERVICE_BENS_ENABLED=
 MICROSERVICE_ACCOUNT_ABSTRACTION_ENABLED=false
