--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -321,7 +321,7 @@ MICROSERVICE_VISUALIZE_SOL2UML_ENABLED=true
 #MICROSERVICE_VISUALIZE_SOL2UML_URL=https://visualizer.wonnetwork.org
 MICROSERVICE_VISUALIZE_SOL2UML_URL=http://visualizer:8050/
 MICROSERVICE_SIG_PROVIDER_ENABLED=true
-MICROSERVICE_SIG_PROVIDER_URL=https://scan.wonnetwork.org:8083/
+#MICROSERVICE_SIG_PROVIDER_URL=https://scan.wonnetwork.org:8083/
 MICROSERVICE_SIG_PROVIDER_URL=http://sig-provider:8050/
 # MICROSERVICE_BENS_URL=
 # MICROSERVICE_BENS_ENABLED=
