--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -318,11 +318,11 @@ MICROSERVICE_SC_VERIFIER_TYPE=sc_verifier
 MICROSERVICE_ETH_BYTECODE_DB_INTERVAL_BETWEEN_LOOKUPS=10m
 MICROSERVICE_ETH_BYTECODE_DB_MAX_LOOKUPS_CONCURRENCY=10
 MICROSERVICE_VISUALIZE_SOL2UML_ENABLED=true
-#MICROSERVICE_VISUALIZE_SOL2UML_URL=https://visualizer.wonnetwork.org
-MICROSERVICE_VISUALIZE_SOL2UML_URL=http://visualizer:8050/
+MICROSERVICE_VISUALIZE_SOL2UML_URL=https://visualizer.wonnetwork.org
+#MICROSERVICE_VISUALIZE_SOL2UML_URL=http://visualizer:8050/
 MICROSERVICE_SIG_PROVIDER_ENABLED=true
-#MICROSERVICE_SIG_PROVIDER_URL=https://scan.wonnetwork.org:8083/
-MICROSERVICE_SIG_PROVIDER_URL=http://sig-provider:8050/
+MICROSERVICE_SIG_PROVIDER_URL=https://scan.wonnetwork.org:8083/
+#MICROSERVICE_SIG_PROVIDER_URL=http://sig-provider:8050/
 # MICROSERVICE_BENS_URL=
 # MICROSERVICE_BENS_ENABLED=
 MICROSERVICE_ACCOUNT_ABSTRACTION_ENABLED=false
