--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -39,3 +39,7 @@ NEXT_PUBLIC_VIEWS_TX_ADDITIONAL_FIELDS=["fee_per_gas"]
 NEXT_PUBLIC_HAS_CONTRACT_AUDIT_REPORTS=true
 NEXT_PUBLIC_WEB3_WALLETS=[ 'metamask','coinbase','token_pocket']
 NEXT_PUBLIC_METASUITES_ENABLED=true
+NEXT_PUBLIC_IS_ACCOUNT_SUPPORTED=true
+NEXT_PUBLIC_AUTH0_CLIENT_ID=jQVwr26WCLhc27rvQQzLSyxllU4hasbd
+NEXT_PUBLIC_AUTH_URL=https://scan.wonnetwork.org
+NEXT_PUBLIC_LOGOUT_URL=https://scan.wonnetwork.org
