--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -41,10 +41,10 @@ services:
     links:
       - db:database
     environment:
-        ETHEREUM_JSONRPC_HTTP_URL: http://host.docker.internal:8545/
-        ETHEREUM_JSONRPC_TRACE_URL: http://host.docker.internal:8545/
-        ETHEREUM_JSONRPC_WS_URL: ws://host.docker.internal:8545/
-        CHAIN_ID: '1337'
+        ETHEREUM_JSONRPC_HTTP_URL: http://10.156.0.4:8545/
+        ETHEREUM_JSONRPC_TRACE_URL: http://10.156.0.4:8545/
+        ETHEREUM_JSONRPC_WS_URL: ws://10.156.0.4:8545/
+        CHAIN_ID: '9496'
 
   visualizer:
     extends:
