--- a/docker-compose/external-frontend.yml
+++ b/docker-compose/external-frontend.yml
@@ -30,10 +30,10 @@ services:
       - db:database
     environment:
         ETHEREUM_JSONRPC_VARIANT: 'ganache'
-        ETHEREUM_JSONRPC_WS_URL: ws://host.docker.internal:8545/
+        ETHEREUM_JSONRPC_WS_URL: ws://10.156.0.4:8545/
         INDEXER_DISABLE_INTERNAL_TRANSACTIONS_FETCHER: 'true'
         INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER: 'true'
-        CHAIN_ID: '1337'
+        CHAIN_ID: '9496'
 
   visualizer:
     extends:
