--- a/docker-compose/services/stats.yml
+++ b/docker-compose/services/stats.yml
@@ -4,7 +4,7 @@ services:
   stats-db-init:
     image: postgres:15
     volumes:
-      - ./stats-db-data:/var/lib/postgresql/data
+      - stats-db-data:/var/lib/postgresql/data
     entrypoint:
       - sh
       - -c
@@ -26,7 +26,7 @@ services:
       - target: 5432
         published: 7433
     volumes:
-      - ./stats-db-data:/var/lib/postgresql/data
+      - stats-db-data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U stats -d stats"]
       interval: 10s
@@ -49,3 +49,4 @@ services:
       - STATS__BLOCKSCOUT_DB_URL=${STATS__BLOCKSCOUT_DB_URL:-postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout}
       - STATS__CREATE_DATABASE=${STATS__CREATE_DATABASE:-true}
       - STATS__RUN_MIGRATIONS=${STATS__RUN_MIGRATIONS:-true}
+
