try to hack nginx

--- a/docker-compose/services/nginx.yml
+++ b/docker-compose/services/nginx.yml
@@ -9,8 +9,8 @@ services:
     volumes:
       - "../proxy:/etc/nginx/templates"
     environment:
-      BACK_PROXY_PASS: ${BACK_PROXY_PASS:-http://backend:4000}
-      FRONT_PROXY_PASS: ${FRONT_PROXY_PASS:-http://frontend:3000}
+      BACK_PROXY_PASS: ${BACK_PROXY_PASS:-http://34.159.113.206:4000}
+      FRONT_PROXY_PASS: ${FRONT_PROXY_PASS:-http://34.159.113.206:3000}
     ports:
       - target: 80
         published: 80
