--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,9 +1,9 @@
 NEXT_PUBLIC_API_HOST=http://34.159.113.206
 NEXT_PUBLIC_API_PROTOCOL=http
 NEXT_PUBLIC_STATS_API_HOST=http://34.159.113.206:8080
-NEXT_PUBLIC_NETWORK_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_SHORT_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_ID=5
+NEXT_PUBLIC_NETWORK_NAME=Weave VM
+NEXT_PUBLIC_NETWORK_SHORT_NAME=Weave VM
+NEXT_PUBLIC_NETWORK_ID=9496
 NEXT_PUBLIC_NETWORK_CURRENCY_NAME=tWVM
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=tWVM
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
