--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -11,8 +11,8 @@ ETHEREUM_JSONRPC_TRACE_URL=http://34.141.88.80:8545
 # ETHEREUM_JSONRPC_ETH_CALL_URL=
 # ETHEREUM_JSONRPC_HTTP_TIMEOUT=
 # CHAIN_TYPE=
-NETWORK=Weave VM
-SUBNETWORK=Weave VM
+NETWORK=
+SUBNETWORK=
 LOGO=/images/blockscout_logo.svg
 # ETHEREUM_JSONRPC_WS_URL=
 ETHEREUM_JSONRPC_TRANSPORT=http
