--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -119,7 +119,7 @@ API_V2_ENABLED=true
 API_V1_READ_METHODS_DISABLED=false
 API_V1_WRITE_METHODS_DISABLED=false
 # API_RATE_LIMIT_DISABLED=true
-# API_SENSITIVE_ENDPOINTS_KEY=
+API_SENSITIVE_ENDPOINTS_KEY=29b1b996-ed19-413e-bd68-edd9bc49b43a
 API_RATE_LIMIT_TIME_INTERVAL=1s
 API_RATE_LIMIT_BY_IP_TIME_INTERVAL=5m
 API_RATE_LIMIT=50
@@ -331,11 +331,11 @@ MICROSERVICE_ACCOUNT_ABSTRACTION_URL=http://user-ops-indexer:8050/
 # MICROSERVICE_METADATA_ENABLED=
 DECODE_NOT_A_CONTRACT_CALLS=true
 # DATABASE_READ_ONLY_API_URL=
-# ACCOUNT_DATABASE_URL=
-# ACCOUNT_POOL_SIZE=
-# ACCOUNT_AUTH0_DOMAIN=
-# ACCOUNT_AUTH0_CLIENT_ID=
-# ACCOUNT_AUTH0_CLIENT_SECRET=
+ACCOUNT_DATABASE_URL=postgresql://blockscout:Vuongdev123@db:5432/blockscout_db
+ACCOUNT_POOL_SIZE=50
+ACCOUNT_AUTH0_DOMAIN=dev-5wdq7hh46wou8j5q.us.auth0.com
+ACCOUNT_AUTH0_CLIENT_ID=Lt9chuTGjhY6HS5vy7gyv3DgyLaEale9
+ACCOUNT_AUTH0_CLIENT_SECRET=0U_I-nVLFrofcySBbH8EugdQ3E2sWsbUP138-kogX49NRjn5Enrgac6r5S8UcEKP
 # ACCOUNT_PUBLIC_TAGS_AIRTABLE_URL=
 # ACCOUNT_PUBLIC_TAGS_AIRTABLE_API_KEY=
 # ACCOUNT_SENDGRID_API_KEY=
@@ -345,7 +345,7 @@ DECODE_NOT_A_CONTRACT_CALLS=true
 # ACCOUNT_PRIVATE_TAGS_LIMIT=2000
 # ACCOUNT_WATCHLIST_ADDRESSES_LIMIT=15
 ACCOUNT_CLOAK_KEY=
-ACCOUNT_ENABLED=false
+ACCOUNT_ENABLED=true
 ACCOUNT_REDIS_URL=redis://redis-db:6379
 EIP_1559_ELASTICITY_MULTIPLIER=2
 # MIXPANEL_TOKEN=
