chore: fix context

--- a/docker-compose/prod/docker-compose.yml
+++ b/docker-compose/prod/docker-compose.yml
@@ -27,8 +27,8 @@ services:
       file: ./services/backend.yml
       service: backend
     build:
-      context: ./..
-      dockerfile: ./../docker/Dockerfile
+      context: ../..
+      dockerfile: ./docker/Dockerfile
       args:
         CACHE_EXCHANGE_RATES_PERIOD: ""
         API_V1_READ_METHODS_DISABLED: "false"
