--- a/docker-compose/prod/docker-compose.yml
+++ b/docker-compose/prod/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     environment:
         ETHEREUM_JSONRPC_HTTP_URL: http://34.141.88.80:8545/
         ETHEREUM_JSONRPC_TRACE_URL: http://34.141.88.80:8545/
-        ETHEREUM_JSONRPC_WS_URL: ws://34.141.88.80:8545/
+        # ETHEREUM_JSONRPC_WS_URL: ws://34.141.88.80:8545/
         CHAIN_ID: '9496'
 
   visualizer:
