--- a/.github/workflows/pre-release-shibarium.yml
+++ b/.github/workflows/pre-release-shibarium.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup repo
         uses: ./.github/actions/setup-repo
+        id: setup
         with:
           docker-username: ${{ secrets.DOCKER_USERNAME }}
           docker-password: ${{ secrets.DOCKER_PASSWORD }}
@@ -32,6 +33,7 @@ jobs:
           file: ./docker/Dockerfile
           push: true
           tags: blockscout/blockscout-shibarium:${{ env.RELEASE_VERSION }}-alpha.${{ inputs.number }}
+          labels: ${{ steps.setup.outputs.docker-labels }}
           platforms: |
             linux/amd64
           build-args: |
@@ -53,6 +55,7 @@ jobs:
           file: ./docker/Dockerfile
           push: true
           tags: blockscout/blockscout-shibarium:${{ env.RELEASE_VERSION }}-alpha.${{ inputs.number }}-indexer
+          labels: ${{ steps.setup.outputs.docker-labels }}
           platforms: |
             linux/amd64
           build-args: |
@@ -73,6 +76,7 @@ jobs:
           file: ./docker/Dockerfile
           push: true
           tags: blockscout/blockscout-shibarium:${{ env.RELEASE_VERSION }}-alpha.${{ inputs.number }}-api
+          labels: ${{ steps.setup.outputs.docker-labels }}
           platforms: |
             linux/amd64
           build-args: |
