Add new envs to docker-compose/envs/common-blockscout.env

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -379,3 +379,7 @@ TENDERLY_CHAIN_PATH=
 # MUD_INDEXER_ENABLED=
 # MUD_DATABASE_URL=
 # MUD_POOL_SIZE=50
+# WETH_TOKEN_TRANSFERS_FILTERING_ENABLED=false
+# WHITELISTED_WETH_CONTRACTS=
+# SANITIZE_INCORRECT_WETH_BATCH_SIZE=100
+# SANITIZE_INCORRECT_WETH_CONCURRENCY=1
